Version 0.0.22
Fixed a bug where task data was not being read correctly from very large MPP9 files.
Removed arbitrary restrictions on the number of various entities, originally taken from the MPX spec.

Version 0.0.21
Fixed a bug where the task start date attribute was not always correct for MPP8 files.
Fixed a bug causing valid tasks to be incorrectly identified as being deleted in MPP8 files.
Fixed a bug causing en exception when reading certain MPP9 files.
Updated to allow localised MPX files to be written and read.
Implemented support for German MPX files.
Implemented generic mechanism for dealing with task field aliases.
Implemented task field alias read/write for MSPDI files.
Implemented task field alias read for MPP9 files.
Implemented resource field alias read/write for MSPDI files.
Implemented resource field alias read for MPP9 files.

Version 0.0.20
Fixed a bug where alternative decimal delimiters and thousands separators were not being handled correctly when reading and writing MPX files.
Fixed a bug causing a null pointer exception when writing an MSPDI file.
Fixed a bug in MSPDI files where default values were being written incorrectly for some task attributes.
Fixed a bug with MSPDI file date handling in non GMT time zones.
Fixed a bug in processing calendar data where data block is not a multiple of 12 bytes
Fixed a bug processing tables where column data is null
Added support for task calendars.
Fixed checkstyle code warnings.
Fixed Eclipse code warnings.
Updated to include version 2.5 of the POI library.

Version 0.0.19
Fixed a bug reading table data from certain MPP8 files
Updated MSPDI support to use latest version of JAXB (from JWSDP-1.3)
Reimplemented base and resource calendars as a single MPXCalendar class
Updated support for base calendars and resource calendars for all file formats
Improved MPXException to print details of any nested exception when a stack trace is printed.
Removed unnecessary use of ByteArray.java