@@ -1,6 +1,7 @@
 Version 0.0.22
 Fixed a bug where task data was not being read correctly from very large MPP9 files.
 Removed arbitrary restrictions on the number of various entities, originally taken from the MPX spec.
+Implemented an enhancement to improve file loading speed by an order of magnitude for files with a large number of tasks or resources (based on a contribution by Brian Leach).
 
 Version 0.0.21
 Fixed a bug where the task start date attribute was not always correct for MPP8 files.
